# kafka-chat

./: README.md  pyproject.toml
src/kchat/: cli.py
src/kchat/kafka/: consumer.py  consumerChat.py  multiChat.py  prod.py  producerChat.py
tests/: test_ping.py
