[project]
name = "kchat"
version = "0.2.0"
description = "real time chat app through KAFKA"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
kchat-ping="kchat.cli:ping"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath="src"
